--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,12 @@
     "react-hook-form": "^7.50.0",
     "react-native": "0.73.2",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-image-picker": "^7.1.0",
     "react-native-picker-select": "^9.0.1",
     "react-native-reanimated": "^3.6.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
+    "react-router-dom": "^6.22.0",
     "react-router-native": "^6.22.0"
   },
   "devDependencies": {
