--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "expo": "~50.0.5",
     "expo-constants": "^15.4.5",
+    "expo-file-system": "^16.0.6",
     "expo-image": "^1.10.5",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
